--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,12 @@
   </head>
   <body>
     <h1>Project Euler</h1>
+    <p>{{ map }}</p>
+    <h4>Problems</h4>
+    <ol>
+      {% for i in range(0, len) %}
+        <li><a href="{{ problems[i].endpoint }}">{{ problems[i].name }}</a></li>
+      {% endfor %}
+    </ol>
   </body>
 </html>
