--- a/templates/solution.html
+++ b/templates/solution.html
@@ -4,7 +4,9 @@
   </head>
   <body>
     <h1>{{ title }}</h1>
+    <p>{{ description }}</p>
     <p>The answer is {{ answer }}.</p>
-    <p>Calculation took {{ duration }} seconds.</p>
+    <p>The calculation took {{ duration }} seconds.</p>
+    <a href="/">Go back</a>
   </body>
 </html>
